--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="class3.c" />
     <ClCompile Include="class4.c" />
+    <ClCompile Include="class5.c" />
     <ClCompile Include="hello_world_2022.c" />
     <ClCompile Include="overflow.c" />
     <ClCompile Include="size.c" />
