--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="class4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
