--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="class4.c" />
     <ClCompile Include="class5.c" />
     <ClCompile Include="class6.c" />
+    <ClCompile Include="class7.c" />
     <ClCompile Include="hello_world_2022.c" />
     <ClCompile Include="overflow.c" />
     <ClCompile Include="size.c" />
