--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="class5.c" />
     <ClCompile Include="class6.c" />
     <ClCompile Include="class7.c" />
+    <ClCompile Include="class8.c" />
     <ClCompile Include="hello_world_2022.c" />
     <ClCompile Include="overflow.c" />
     <ClCompile Include="size.c" />
