--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="class7.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class8.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
