array, multi-dimensional array

--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -48,5 +48,11 @@
     <ClCompile Include="class8.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class9.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="class10.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
