--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="class10.c" />
+    <ClCompile Include="class11.c" />
     <ClCompile Include="class3.c" />
     <ClCompile Include="class4.c" />
     <ClCompile Include="class5.c" />
