문자열 <string.h> 함수

--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="class10.c" />
     <ClCompile Include="class11.c" />
+    <ClCompile Include="class12.c" />
     <ClCompile Include="class3.c" />
     <ClCompile Include="class4.c" />
     <ClCompile Include="class5.c" />
