--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -57,5 +57,8 @@
     <ClCompile Include="class11.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class12.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
