--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="class13.c" />
     <ClCompile Include="class14.c" />
     <ClCompile Include="class15.c" />
+    <ClCompile Include="class16.c" />
     <ClCompile Include="class3.c" />
     <ClCompile Include="class4.c" />
     <ClCompile Include="class5.c" />
