--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="class15.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class16.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
