동적메모리할당1

--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClCompile Include="class16.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class17.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
