구조체 동적메모리 할당

--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="class15.c" />
     <ClCompile Include="class16.c" />
     <ClCompile Include="class17.c" />
+    <ClCompile Include="class18.c" />
     <ClCompile Include="class3.c" />
     <ClCompile Include="class4.c" />
     <ClCompile Include="class5.c" />
