--- a/HelloWorld2022/HelloWorld2022.vcxproj
+++ b/HelloWorld2022/HelloWorld2022.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="class16.c" />
     <ClCompile Include="class17.c" />
     <ClCompile Include="class18.c" />
+    <ClCompile Include="class19.c" />
     <ClCompile Include="class3.c" />
     <ClCompile Include="class4.c" />
     <ClCompile Include="class5.c" />
