--- a/HelloWorld2022/HelloWorld2022.vcxproj.filters
+++ b/HelloWorld2022/HelloWorld2022.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="class18.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="class19.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
